fix harf sample flickering when switching between samples

--- a/src/harf-src/src/stylesheets/sample-section.scss
+++ b/src/harf-src/src/stylesheets/sample-section.scss
@@ -35,6 +35,7 @@ p {
     justify-content: space-between;
     align-items: flex-end;
     flex-direction: column;
+    width: 213px;
 }
 
 .white-title-sample {
